# parallel

./: CMakeLists.txt  README.md
include/: arrayinit.h  gpuarray.h  kernels.h  utils.h
src/: add.cu  gpuarray.cu  gpuarray_internal.cu  gpuarray_kernels.cu  increament.cu  shift.cu  square.cu  utils.cpp
